--- a/src/package.json
+++ b/src/package.json
@@ -10,9 +10,12 @@
   "dependencies": {
     "@sanity/block-content-to-react": "^2.0.7",
     "@sanity/client": "^2.1.4",
+    "autoprefixer": "^10.2.3",
     "next": "10.0.5",
     "next-sanity": "^0.1.8",
+    "postcss": "^8.2.4",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "tailwindcss": "^2.0.2"
   }
 }
