--- a/src/package.json
+++ b/src/package.json
@@ -15,6 +15,7 @@
     "@sanity/client": "^2.2.6",
     "autoprefixer": "^10.2.4",
     "next": "10.0.5",
+    "framer-motion": "^3.3.0",
     "next-sanity": "^0.1.8",
     "postcss": "^8.2.5",
     "react": "17.0.1",
