--- a/src/package.json
+++ b/src/package.json
@@ -7,26 +7,28 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint .",
-    "lint:fix": "eslint --fix",
+    "lint-fix": "eslint ./ --fix",
     "format": "prettier --write \"**/*.+(js|jsx|json|css|md)\""
   },
   "dependencies": {
     "@sanity/block-content-to-react": "^2.0.7",
     "@sanity/client": "^2.2.6",
     "autoprefixer": "^10.2.4",
-    "next": "10.0.5",
     "framer-motion": "^3.3.0",
+    "next": "10.0.5",
     "next-sanity": "^0.1.8",
     "postcss": "^8.2.5",
+    "prop-types": "^15.7.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "tailwindcss": "^2.0.3"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.15.0",
+    "@typescript-eslint/eslint-plugin": "^4.15.1",
     "@typescript-eslint/parser": "^4.15.0",
-    "eslint": "^7.19.0",
+    "eslint": "^7.20.0",
     "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-airbnb-typescript": "^12.3.1",
     "eslint-config-prettier": "^7.2.0",
     "eslint-config-standard": "^16.0.2",
     "eslint-plugin-import": "^2.22.1",
@@ -38,6 +40,7 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^4.3.8",
     "lint-staged": "^10.5.4",
-    "prettier": "2.2.1"
+    "prettier": "^2.2.1",
+    "prettier-eslint-cli": "^5.0.0"
   }
 }
