refactor, lint and prettier

--- a/src/.eslintrc.json
+++ b/src/.eslintrc.json
@@ -20,6 +20,9 @@
   "plugins": ["react"],
   "rules": {
     "react/react-in-jsx-scope": 0,
-    "quotes": ["error", "double"]
+    "quotes": ["error", "double"],
+    "implicit-arrow-linebreak": ["error", "below"],
+    "multiline": "consistent",
+    "singleline": "consistent"
   }
 }
