--- a/src/.eslintrc.json
+++ b/src/.eslintrc.json
@@ -21,8 +21,7 @@
   "rules": {
     "react/react-in-jsx-scope": 0,
     "quotes": ["error", "double"],
-    "implicit-arrow-linebreak": ["error", "below"],
-    "multiline": "consistent",
-    "singleline": "consistent"
+    "react/prop-types": [2],
+    "object-curly-spacing": ["error", "never"]
   }
 }
